# git-reaper

./: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/skills/run-git-reaper/: SKILL.md  driver.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: agents.md  api.md  commands.md  development.md  index.md  library.md
examples/: README.md  audit.sh  ci-gate.sh  commune-guarded.sh  fleet.sh  orientation.sh  pack-roundtrip.sh  rite-perform.sh  skill-harvest.sh
skills/: README.md
skills/reaper-audit/: SKILL.md
skills/reaper-commune/: SKILL.md
skills/reaper-necromancy/: SKILL.md
skills/reaper-orchestrate/: SKILL.md
skills/reaper-orient/: SKILL.md
skills/reaper-pack/: SKILL.md
src/git_reaper/: __init__.py  __main__.py  art.py  cache.py  cli.py  commune.py  config.py  fsutil.py  ignore.py  incant.py  models.py  plugins.py  rite.py  schemas.py  theme.py  tui.py  tui_ops.py
src/git_reaper/art/: __init__.py
src/git_reaper/art/gallery/: grim-reaper.txt  hero-skull.txt  mini-skull.txt  narrow-skull.txt  tombstone-divider.txt
src/git_reaper/art/seasonal/: jack-o-lantern.txt
src/git_reaper/core/: __init__.py  banshee.py  census.py  dedupe.py  distill.py  effigy.py  embalm.py  exorcise.py  fleet.py  graveyard.py  harvest.py  history.py  hygiene.py  leech.py  lineage.py  pack.py  plague.py  possession.py  prophecy.py  provenance.py  pulse.py  revenant.py  risk.py  rules.py  scan.py  scavenge.py  scry.py  skeleton.py  source.py  tree.py  unpack.py  wake.py  ward.py
src/git_reaper/formatters/: __init__.py  csvfmt.py  htmlfmt.py  jsonfmt.py  markdown.py  svgfmt.py
src/git_reaper/gitio/: __init__.py  backend.py  gitpython_git.py  logparse.py  pygit2_git.py  subprocess_git.py
src/git_reaper/net/: __init__.py  osv.py
src/git_reaper/tui/: __init__.py  altar.py  app.py  console.py  coven.py  crypt.py  grimoire.py  necropolis.py  reliquary.py  seance.py  widgets.py
tests/: conftest.py  test_art.py  test_backend.py  test_banshee.py  test_cache.py  test_census.py  test_cli.py  test_commune.py  test_dedupe.py  test_distill.py  test_effigy.py  test_embalm.py  test_exorcise.py  test_fleet.py  test_fsutil.py  test_gitpython_backend.py  test_graveyard.py  test_grimoire.py  test_harvest.py  test_history.py  test_htmlfmt.py  test_hygiene.py  test_ignore.py  test_incant.py  test_leech.py  test_lineage.py  test_pack.py  test_plague.py  test_plugins.py  test_possession.py  test_prophecy.py  test_pygit2_backend.py  test_revenant.py  test_risk.py  test_rite.py  test_rules.py  test_scan.py  test_scavenge.py  test_schema_freeze.py  test_schemas.py  (+7 more)
