[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "git-reaper"
dynamic = ["version"]
description = "A spooky utility for data mining git repositories (and any folder foolish enough to hold still)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "John McMeen" }]
requires-python = ">=3.10"
keywords = ["git", "cli", "llm", "repository", "analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pathspec>=0.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
git = ["GitPython>=3.1"]
tokens = ["tiktoken>=0.7"]
tui = ["textual>=0.86"]
bones = ["tree-sitter>=0.23", "tree-sitter-language-pack>=0.13"]
all = ["git-reaper[git,tokens,tui,bones]"]

[project.scripts]
# run() (not app) so third-party rituals attach before dispatch
reaper = "git_reaper.cli:run"
git-reaper = "git_reaper.cli:run"

[project.urls]
Homepage = "https://github.com/jmcmeen/git-reaper"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/git_reaper/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/git_reaper"]

[tool.uv]
# re-resolve the project version when commits or tags change, not just pyproject
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["src/git_reaper/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# typer's declarative style puts Option()/Argument() calls in defaults
"src/git_reaper/cli.py" = ["B008"]
# textual's declarative style: BINDINGS is a class-level list by convention
"src/git_reaper/tui.py" = ["RUF012"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/git_reaper"]

[[tool.mypy.overrides]]
module = "pathspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# generated by the hatch-vcs build hook; absent on a fresh checkout
module = "git_reaper._version"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# only installed on Python < 3.11; mypy checks with python_version 3.10
module = "tomli"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# GitPython ships only in the [git] extra; the base type-check must not need it
module = "git.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# tree-sitter ships only in the [bones] extra; the base type-check skips it
module = "tree_sitter_language_pack"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
